# imagefmt

./: Cargo.toml  LICENSE  Makefile  README.md  imagefmt.rs  imageformats.rs  lib.rs  search-index.js
flate2/: enum.Compression.html  index.html  struct.GzBuilder.html  struct.GzHeader.html  trait.FlateReadExt.html  trait.FlateWriteExt.html
imagefmt/: enum.ColFmt.html  enum.ColType.html  enum.Error.html  fn.convert.html  fn.read.html  fn.read_bmp.html  fn.read_bmp_info.html  fn.read_from.html  fn.read_info.html  fn.read_info_from.html  fn.read_jpeg.html  fn.read_jpeg_info.html  fn.read_png.html  fn.read_png_chunks.html  fn.read_png_info.html  fn.read_tga.html  fn.read_tga_info.html  fn.write.html  fn.write_png.html  fn.write_png_chunks.html  fn.write_region.html  fn.write_tga.html  index.html  sidebar-items.js  struct.Image.html  struct.Info.html  struct.PngCustomChunk.html  trait.Sample.html  type.Result.html
lib/: enum.ColFmt.html  enum.ColType.html  fn.convert.html  fn.read.html  fn.read_bmp.html  fn.read_bmp_info.html  fn.read_info.html  fn.read_jpeg.html  fn.read_jpeg_info.html  fn.read_png.html  fn.read_png_chunks.html  fn.read_png_info.html  fn.read_tga.html  fn.read_tga_info.html  fn.write.html  fn.write_png.html  fn.write_png_chunks.html  fn.write_tga.html  index.html  struct.Image.html  struct.Info.html  struct.PngCustomChunk.html
miniz_sys/: constant.MZ_BUF_ERROR.html  constant.MZ_DATA_ERROR.html  constant.MZ_DEFAULT_STRATEGY.html  constant.MZ_DEFAULT_WINDOW_BITS.html  constant.MZ_DEFLATED.html  constant.MZ_ERRNO.html  constant.MZ_FINISH.html  constant.MZ_MEM_ERROR.html  constant.MZ_NEED_DICT.html  constant.MZ_NO_FLUSH.html  constant.MZ_OK.html  constant.MZ_PARAM_ERROR.html  constant.MZ_STREAM_END.html  constant.MZ_STREAM_ERROR.html  constant.MZ_SYNC_FLUSH.html  constant.MZ_VERSION_ERROR.html  enum.mz_internal_state.html  (+11 more)
(+111 files in other folders)
