[package]
name = "imagefmt"
version = "4.0.0"
authors = ["Tero Hänninen"]
description = "Image decoders: PNG, TGA, BMP, JPEG. Encoders: PNG, TGA, BMP."
license = "MIT"
include = ["src/*", "Cargo.toml", "README.md", "LICENSE"]
repository = "https://github.com/lgvz/imagefmt"
documentation = "http://lgvz.github.io/imagefmt/imagefmt/"
keywords = ["image", "png", "jpeg", "bmp", "tga"]

[features]
default = ["png", "jpeg", "bmp", "tga"]
png = ["deflate", "inflate"]
jpeg = []
bmp = []
tga = []

[dependencies]
deflate = { version = "0.7.14", optional = true }
inflate = { version = "0.2.0", optional = true }
